--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">Growing</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/xn--wh8h/-/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/xn--wh8h/-/tarball/master">Download this project as a tar.gz file</a>
+             <!-- <a class="zip_download_link" href="https://github.com/xn--wh8h/-/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/xn--wh8h/-/tarball/master">Download this project as a tar.gz file</a>-->
             </section>
         </header>
     </div>
@@ -31,20 +31,20 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome to my shade.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
+<!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre> -->
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Seriously, it's nice to have branches</p>
 
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Relax.  Read a book.</h3>
+<!--
+<p></p>
 
 <h3>Rather Drive Stick?</h3>
 
@@ -58,13 +58,12 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-    </div>
-
+    </div>-->
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Willow maintained by <a href="https://github.com/xn--wh8h">xn--wh8h</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <!--<p class="copyright">Willow maintained by <a href="https://github.com/xn--wh8h">xn--wh8h</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>-->
       </footer>
     </div>
 
