--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ $ git checkout gh-pages
       </section>
     </div>-->
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+   <!-- <div id="footer_wrap" class="outer">
+      <footer class="inner">-->
         <!--<p class="copyright">Willow maintained by <a href="https://github.com/xn--wh8h">xn--wh8h</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>-->
       </footer>
