--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
       <section id="main_content" class="inner">
         <h3>Welcome to my shade.</h3>
 
-<p>:</p>
+<!--<p></p>-->  
 
 <!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre> -->
 
-<p>Seriously, it's nice to have branches</p>
+
 
 <h3>Relax.  Read a book.</h3>
+<p>It's nice to have branches</p>
 <!--
 <p></p>
 
